--- a/scss/typography.scss
+++ b/scss/typography.scss
@@ -61,7 +61,6 @@ h1,
 .type-headline-lg {
     @include times(36, 16); // Headline Large
     font-weight: 700;
-    letter-spacing: -2px;
     -webkit-font-smoothing: subpixel-antialiased;
 }
 
@@ -70,7 +69,6 @@ h2,
 .type-headline-md {
     @include times(24, 16); // Headline Medium
     font-weight: 700;
-    letter-spacing: -1.5px;
     -webkit-font-smoothing: subpixel-antialiased;
 }
 
@@ -79,7 +77,6 @@ h3,
 .type-headline-sm {
     @include verdana(16, 12); // Headline Small
     font-weight: 700;
-    letter-spacing: -1px;
     -webkit-font-smoothing: subpixel-antialiased;
 }
 
